<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7A7A7A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lastNewMoon"
        android:layout_width="326dp"
        android:layout_height="39dp"
        android:text="@string/last_newmoon"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nextFullMoon"
        android:layout_width="326dp"
        android:layout_height="39dp"
        android:text="@string/next_fullmoon"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNewMoon"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/moonImage"
        android:layout_width="251dp"
        android:layout_height="282dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/n30" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="166dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/moon_phases"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todayText"
        android:layout_width="326dp"
        android:layout_height="39dp"
        android:text="@string/today"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moonImage"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/fullmoonsButton"
        android:layout_width="326dp"
        android:layout_height="51dp"
        android:background="#6498C1"
        android:onClick="clickButton"
        android:text="@string/fullmoons_in_year"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextFullMoon"
        app:layout_constraintVertical_bias="0.104" />

</androidx.constraintlayout.widget.ConstraintLayout>